[workspace]
members = ["client"]

[package]
name = "clique"
version = "0.1.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[workspace.dependencies]
serde = { version = "1.0.196", features = ["derive"] }
strum = { version = "0.26.1", features = ["derive"] }
thiserror = "1.0.57"
eyre = "0.6.12"

[dependencies]
serde = { workspace = true }
strum = { workspace = true }
thiserror = { workspace = true }
eyre = { workspace = true }
axum = { version = "0.7.4", features = ["ws"] }
futures = "0.3.30"
rand = "0.8.5"
tokio = { version = "1.36.0", features = ["full"] }
tower = { version = "0.4.13", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
