[package]
name = "client"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
leptos = { version = "0.6.5", features = ["csr", "nightly"] }
serde = { workspace = true }
thiserror = { workspace = true }
eyre = { workspace = true }
strum = { workspace = true }
wasm-bindgen-futures = "0.4.41"
futures = "0.3.30"
console_error_panic_hook = "0.1.7"
leptos-use = "0.10.2"
web-sys = { version = "0.3.68", features = ["WebSocket"] }
tracing-wasm = "0.2.1"
